--- a/less/essential-pix.less
+++ b/less/essential-pix.less
@@ -3,4 +3,9 @@
  * @copyright   2014 Gareth J Barnard, David Bezemer
  * @license     http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
+@import "moodle/pix/core";
+@import "moodle/pix/course";
+@import "moodle/pix/filemanager";
+@import "moodle/pix/forms";
+@import "moodle/pix/grade";
 @import "essential/essential-pix";
