--- a/less/moodle/dock.less
+++ b/less/moodle/dock.less
@@ -20,6 +20,7 @@
 body.has_dock {
   #page {
     padding-left: (@dockWidth + (@dockTitleMargin * 3));
+    padding-right: 0;
   }
   div#dock {
     display: inline;
@@ -30,7 +31,8 @@ body.has_dock {
   width: (@dockWidth + (@dockTitleMargin * 2));
   position: fixed;
   top: 0;
-  left: 0;
+  left: 0%;
+  right: auto;
   height: 100%;
   background-color: transparent;
   border-right: 0 none;
@@ -125,30 +127,6 @@ body.has_dock {
       }
       .hidepanemicon img {
         cursor: pointer;
-      }
-    }
-  }
-}
-
-.dir-rtl {
-  &.has_dock #page {
-    padding-left: 0;
-    padding-right: (@dockWidth + (@dockTitleMargin * 3));
-  }
-  #dock {
-    left: auto;
-    right: 0%;
-    .dockedtitle {
-      h2 {
-        line-height: @dockWidth - @dockTitleFontSize;
-      }
-    }
-  }
-  #dockeditempanel {
-    right: 100%;
-    .dockeditempanel_hd {
-      .commands {
-        text-align: left;
       }
     }
   }
