--- a/less/moodle/filemanager.less
+++ b/less/moodle/filemanager.less
@@ -99,12 +99,7 @@
   float: left;
   height: 525px;
   border-right: 1px solid #BBBBBB;
-}
-
-.dir-rtl .file-picker .fp-repo-area {
-  border-left: 1px solid #BBBBBB;
-  border-right: none;
-  float: right;
+  border-left: none;
 }
 
 .file-picker .fp-repo-items {
@@ -117,17 +112,6 @@
   margin-left: 0px;
   margin-right: 0px;
   float: left;
-}
-
-.dir-rtl .file-picker .fp-repo-items {
-  margin-left: 0px;
-  margin-right: 181px;
-}
-
-.dir-rtl .moodle-dialogue-fullscreen .file-picker .fp-repo-items {
-  margin-left: 0px;
-  margin-right: 0px;
-  float: right;
 }
 
 .file-picker .fp-navbar {
@@ -164,49 +148,6 @@
   height: 98%;
 }
 
-.dir-rtl .file-picker .fp-list {
-  text-align: right;
-}
-
-.dir-rtl .file-picker .fp-toolbar {
-  padding: 4px;
-}
-
-.dir-rtl .file-picker .fp-list {
-  text-align: right;
-}
-
-.dir-rtl .file-picker .fp-repo-name {
-  display: inline;
-}
-
-.dir-rtl .file-picker .fp-pathbar {
-  text-align: right;
-  display: block;
-  border-top: none;
-}
-
-.dir-rtl .file-picker div.bd {
-  text-align: right;
-}
-
-.dir-rtl #filemenu .yuimenuitemlabel {
-  text-align: right;
-}
-
-.dir-rtl .filepicker .yui-layout-unit-left {
-  left: 500px;
-}
-
-.dir-rtl .filepicker .yui-layout-unit-center {
-  left: 0;
-}
-
-// File Manager
-.dir-rtl .filemanager-toolbar a {
-  padding: 0;
-}
-
 // Repositories on fp-repo-area (File Picker only)
 .file-picker .fp-list {
   list-style-type: none;
@@ -214,11 +155,7 @@
   float: left;
   width: 100%;
   margin: 0;
-}
-
-.dir-rtl .file-picker .fp-list {
-  text-align: right;
-  float: left;
+  text-align: left;
 }
 
 .file-picker .fp-list .fp-repo a {
@@ -241,30 +178,15 @@
   float: left;
 }
 
-.dir-rtl .fp-toolbar {
-  float: right;
-}
-
 .fp-toolbar.empty {
-  display: none;
-}
-
-.dir-rtl .fp-toolbar div.disabled,
-.fp-toolbar .disabled {
   display: none;
 }
 
 .fp-toolbar div {
   display: block;
   float: left;
+  margin-left: 0px;
   margin-right: 4px;
-}
-
-.dir-rtl .fp-toolbar div {
-  display: block;
-  float: right;
-  margin-left: 4px;
-  margin-right: 0px;
 }
 
 .fp-toolbar img {
@@ -278,7 +200,6 @@
 }
 
 .fp-toolbar .fp-tb-search input {
-  background: #FFFFFF url('[[pix:a/search]]') no-repeat 7px 7px;
   padding: 2px 6px 1px 27px;
   width: 200px;
   height: 27px;
@@ -296,14 +217,6 @@
 
 .fp-repo-items fp-viewbar {
   margin: 4px;
-}
-
-.dir-rtl .fp-toolbar img {
-  vertical-align: -35%;
-}
-
-.dir-rtl .fp-viewbar {
-  float: left;
 }
 
 .fp-viewbar a {
@@ -349,35 +262,6 @@
   clear: left;
 }
 
-// over ride hover rule from core.css
-.dir-rtl .filemanager-toolbar .fp-vb-icons a:hover {
-  background: url('[[pix:theme|fp/view_icon_selected]]');
-}
-
-.dir-rtl .filemanager-toolbar .fp-vb-icons.checked a:hover {
-  background: url('[[pix:theme|fp/view_icon_active]]') no-repeat 0 0;
-}
-
-.dir-rtl .fp-vb-details a:hover {
-  background: none;
-  border: 20px solid black;
-}
-
-.dir-rtl .fp-vb-details.checked a:hover {
-  background: none;
-  border: 40px solid black;
-}
-
-.dir-rtl .fp-vb-tree a:hover {
-  background: none;
-  border: 30px solid black;
-}
-
-.dir-rtl .fp-vb-tree.checked a:hover {
-  background: none;
-  border: 50px solid black;
-}
-
 .file-picker .fp-pathbar {
   display: table-row;
 }
@@ -387,33 +271,14 @@
 }
 
 .fp-pathbar .fp-path-folder {
-  background: url('[[pix:theme|fp/path_folder]]') no-repeat 0 0;
   width: 27px;
   height: 12px;
   margin-left: 4px;
 }
 
-.dir-rtl .fp-pathbar .fp-path-folder {
-  background: url('[[pix:theme|fp/path_folder_rtl]]') no-repeat right top;
-  width: auto;
-  height: 12px;
-  margin-left: 4px;
-}
-
-.dir-rtl .fp-pathbar span {
-  display: inline-block;
-  .ie7-inline-block();
-  float: right;
-  margin-left: 32px;
-}
-
 .fp-pathbar .fp-path-folder-name {
   margin-left: 32px;
-  line-height: 20px;
-}
-
-.dir-rtl .fp-pathbar .fp-path-folder-name {
-  margin-right: 32px;
+  margin-right: 0px;
   line-height: 20px;
 }
 
@@ -466,10 +331,6 @@
   min-width: 112px;
 }
 
-.dir-rtl .fp-iconview .fp-file {
-  float: right;
-}
-
 // Table view (File Picker only)
 .file-picker .yui3-datatable table {
   border: 0 solid #BBBBBB;
@@ -493,23 +354,11 @@
   border-left: 0 solid #FFFFFF;
 }
 
-.dir-rtl .file-picker .yui3-datatable-header {
-  text-align: right;
-}
-
 // Tree view (File Manager only)
 
 // first or middle sibling, no children
 .file-picker .ygtvtn,
 .filemanager .ygtvtn {
-  background: url('[[pix:moodle|y/tn]]') 0 0 no-repeat;
-  width: 17px;
-  height: 22px;
-}
-
-.dir-rtl .filemanager .ygtvtn,
-.dir-rtl .file-picker .ygtvtn {
-  background: url('[[pix:moodle|y/tn_rtl]]') 0 0 no-repeat;
   width: 17px;
   height: 22px;
 }
@@ -517,7 +366,6 @@
 // first or middle sibling, collapsable
 .file-picker .ygtvtm,
 .filemanager .ygtvtm {
-  background: url('[[pix:moodle|y/tm]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
@@ -526,7 +374,6 @@
 // first or middle sibling, collapsable, hover
 .file-picker .ygtvtmh,
 .filemanager .ygtvtmh {
-  background: url('[[pix:moodle|y/tm]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
@@ -535,48 +382,29 @@
 // first or middle sibling, expandable
 .file-picker .ygtvtp,
 .filemanager .ygtvtp {
-  background: url('[[pix:moodle|y/tp]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
 }
 
-.dir-rtl .file-picker .ygtvtp,
-.dir-rtl .filemanager .ygtvtp {
-  background: url('[[pix:moodle|y/tp_rtl]]') 0 10px no-repeat;
-}
-
 // first or middle sibling, expandable, hover
 .file-picker .ygtvtph,
 .filemanager .ygtvtph {
-  background: url('[[pix:moodle|y/tp]]') 0 10px no-repeat;
   width: 13px;
   height: 22px;
   cursor: pointer;
 }
 
-.dir-rtl .file-picker .ygtvtph,
-.dir-rtl .filemanager .ygtvtph {
-  background: url('[[pix:moodle|y/tp_rtl]]') 0 10px no-repeat;
-}
-
 // last sibling, no children
 .file-picker .ygtvln,
 .filemanager .ygtvln {
-  background: url('[[pix:moodle|y/ln]]') 0 0 no-repeat;
   width: 17px;
   height: 22px;
-}
-
-.dir-rtl .file-picker .ygtvln,
-.dir-rtl .filemanager .ygtvln {
-  background: url('[[pix:moodle|y/ln_rtl]]') 0 0 no-repeat;
 }
 
 // Last sibling, collapsable
 .file-picker .ygtvlm,
 .filemanager .ygtvlm {
-  background: url('[[pix:moodle|y/lm]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
@@ -585,7 +413,6 @@
 // Last sibling, collapsable, hover
 .file-picker .ygtvlmh,
 .filemanager .ygtvlmh {
-  background: url('[[pix:moodle|y/lm]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
@@ -594,35 +421,22 @@
 // Last sibling, expandable
 .file-picker .ygtvlp,
 .filemanager .ygtvlp {
-  background: url('[[pix:moodle|y/lp]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
-}
-
-.dir-rtl .file-picker .ygtvlp,
-.dir-rtl .filemanager .ygtvlp {
-  background: url('[[pix:moodle|y/lp_rtl]]') 0 10px no-repeat;
 }
 
 // Last sibling, expandable, hover
 .file-picker .ygtvlph,
 .filemanager .ygtvlph {
-  background: url('[[pix:moodle|y/lp]]') 0 10px no-repeat;
   width: 13px;
   height: 12px;
   cursor: pointer;
 }
 
-.dir-rtl .file-picker .ygtvlph,
-.dir-rtl .filemanager .ygtvlph {
-  background: url('[[pix:moodle|y/lp_rtl]]') 0 10px no-repeat;
-}
-
 // Loading icon
 .file-picker .ygtvloading,
 .filemanager .ygtvloading {
-  background: transparent url('[[pix:moodle|y/loading]]') 0 0 no-repeat;
   width: 16px;
   height: 22px;
 }
@@ -630,7 +444,6 @@
 // the style for the empty cells that are used for rendering the depth of the node
 .file-picker .ygtvdepthcell,
 .filemanager .ygtvdepthcell {
-  background: url('[[pix:moodle|y/vline]]') 0 0 no-repeat;
   width: 17px;
   height: 32px;
 }
@@ -672,15 +485,10 @@ a.ygtvspacer:hover {
   margin-top: -7px;
   width: 24px;
   height: 24px;
+  margin-left: 0;
   margin-right: 10px;
   text-align: center;
   line-height: 24px;
-}
-
-.dir-rtl .fp-icon {
-  float: right;
-  margin-left: 10px;
-  margin-right: 0;
 }
 
 .fp-icon img {
@@ -690,12 +498,8 @@ a.ygtvspacer:hover {
 }
 
 .fp-filename {
+  padding-left: 0;
   padding-right: 10px;
-}
-
-.dir-rtl .fp-filename {
-  padding-left: 10px;
-  padding-right: 0;
 }
 
 // Repositories Login on fp-content (File Picker only)
@@ -1082,12 +886,10 @@ a.ygtvspacer:hover {
 }
 
 .fp-iconview .fp-file.fp-hasreferences .fp-reficons1 {
-  background: url('[[pix:theme|fp/link]]') no-repeat;
   background-position: bottom right;
 }
 
 .fp-iconview .fp-file.fp-isreference .fp-reficons2 {
-  background: url('[[pix:theme|fp/alias]]') no-repeat;
   background-position: bottom left;
 }
 
@@ -1096,7 +898,6 @@ a.ygtvspacer:hover {
 }
 
 .filemanager .fp-iconview .fp-file.fp-originalmissing .fp-thumbnail {
-  background: url([[pix:s/dead]]) no-repeat;
   background-position: center center;
 }
 
@@ -1124,7 +925,6 @@ a.ygtvspacer:hover {
 }
 
 .filemanager .fp-filename-icon.fp-hasreferences .fp-reficons1 {
-  background: url('[[pix:theme|fp/link_sm]]') no-repeat 0 0;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -1134,7 +934,6 @@ a.ygtvspacer:hover {
 }
 
 .filemanager .fp-filename-icon.fp-isreference .fp-reficons2 {
-  background: url('[[pix:theme|fp/alias_sm]]') no-repeat 0 0;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -1151,6 +950,7 @@ a.ygtvspacer:hover {
 .filemanager .fp-iconview .fp-folder.fp-hascontextmenu .fp-contextmenu {
   display: block;
   position: absolute;
+  left: inherit;
   right: 7px;
   bottom: 5px;
 }
@@ -1162,18 +962,6 @@ a.ygtvspacer:hover {
   left: 14px;
   margin-right: -20px;
   top: 6px;
-}
-
-.dir-rtl .filemanager .fp-iconview .fp-folder.fp-hascontextmenu .fp-contextmenu {
-  left: 7px;
-  right: inherit;
-}
-
-.dir-rtl .filemanager .fp-treeview .fp-folder.fp-hascontextmenu .fp-contextmenu,
-.dir-rtl .filemanager .fp-tableview .fp-folder.fp-hascontextmenu .fp-contextmenu {
-  left: inherit;
-  right: 16px;
-  margin-right: 0;
 }
 
 // Drag and drop support (filemanager and filepicker form elements)
@@ -1251,7 +1039,6 @@ a.ygtvspacer:hover {
 }
 
 .dndupload-arrow {
-  background: url([[pix:theme|fp/dnd_arrow]]) center no-repeat;
   width: 100%;
   height: 80px;
   position: absolute;
@@ -1380,10 +1167,6 @@ a.ygtvspacer:hover {
   margin: 20px;
 }
 
-.dir-rtl .filemanager .fp-mkdir-dlg p {
-  text-align: right;
-}
-
 // Confirm dialogue for delete (File Manager only)
 .filemanager.fp-dlg {
   text-align: center;
@@ -1403,40 +1186,6 @@ a.ygtvspacer:hover {
 // file picker search dialog
 .file-picker div.bd {
   text-align: left;
-}
-
-// RTL Overrides
-.dir-rtl {
-  .filemanager {
-    .fp-restrictions {
-      text-align: left;
-    }
-  }
-  .file-picker div.bd,
-  .file-picker .fp-pathbar,
-  .file-picker .fp-list,
-  #filemenu .yuimenuitemlabel,
-  .filemanager-container .yui3-skin-sam .yui3-datatable-header {
-    text-align: right;
-  }
-  .filepicker {
-    .yui-layout-unit-left {
-      left: 500px;
-    }
-    .yui-layout-unit-center {
-      left: 0;
-    }
-  }
-  .file-picker .fp-toolbar {
-    .fp-tb-search input {
-      background-position: 208px 7px;
-      padding: 2px 30px 1px 3px;
-    }
-    div {
-      float: right;
-      margin-left: 4px;
-    }
-  }
 }
 
 // Upload form for file picker.
@@ -1465,6 +1214,7 @@ a.ygtvspacer:hover {
     }
     .controls {
       margin-left: 125px;
+      margin-right: 0;
     }
     .controls.control-radio input {
       margin-top: 3px;
@@ -1481,49 +1231,9 @@ a.ygtvspacer:hover {
 .fp-fileinfo .fp-value {
   display: inline-block;
   padding-left: 5px;
-}
-
-.dir-rtl .fp-forminset {
-  max-width: 400px;
-  .control-group {
-    label.control-label {
-      float: right;
-      text-align: left;
-    }
-    label.control-radio {
-      float: left;
-      text-align: right;
-      width: 215px;
-    }
-    .controls {
-      margin-left: 0;
-      margin-right: 125px;
-    }
-  }
-  .fp-select-buttons {
-    float: left;
-  }
-  input[type="text"] {
-    width: 228px;
-  }
-}
-
-.dir-rtl .fp-fileinfo .fp-value {
-  display: inline-block;
-  padding-right: 5px;
+  padding-right: 0px;
 }
 
 .dir-rtl .fp-select .fp-thumbnail {
   margin: 10px 0 0 0px;
-}
-
-.dir-rtl .filepicker .fp-formset {
-  label {
-    float: right;
-    text-align: left;
-  }
-  .controls {
-    margin-left: 0;
-    text-align: right;
-  }
 }
