--- a/less/moodle/forms.less
+++ b/less/moodle/forms.less
@@ -41,22 +41,8 @@ form {
 .mform fieldset.collapsible legend a.fheader {
   padding: 0 5px 0 20px;
   margin-left: -20px;
-  background: url([[pix:t/expanded]]) 2px center no-repeat;
-}
-
-.dir-rtl .mform fieldset.collapsible legend a.fheader {
-  padding: 0 20px 0 5px;
-  margin-right: -20px;
-  margin-left: 0;
-  background-position: right center;
-}
-
-.mform fieldset.collapsed legend a.fheader {
-  background-image: url([[pix:t/collapsed]]);
-}
-
-.dir-rtl .mform fieldset.collapsed legend a.fheader {
-  background-image: url([[pix:t/collapsed_rtl]]);
+  margin-right: 0;
+  background-position: left center;
 }
 
 .jsenabled .mform .collapsed .fcontainer {
@@ -93,10 +79,6 @@ form {
 
 .mform .iconhelp {
   margin-left: 4px;
-}
-
-.dir-rtl .mform .iconhelp {
-  margin-right: 4px;
 }
 
 .mform .ftextarea #id_alltext {
@@ -146,12 +128,8 @@ form {
 }
 
 .singleselect label {
+  margin-left: 0;
   margin-right: .3em;
-}
-
-.dir-rtl .singleselect label {
-  margin-left: .3em;
-  margin-right: 0;
 }
 
 input#id_externalurl {
@@ -176,14 +154,6 @@ input#id_externalurl {
   .form-horizontal .control-label
 }
 
-.dir-rtl {
-  .form-item .form-label,
-  .mform .fitem div.fitemtitle {
-    float: right;
-    text-align: left;
-  }
-}
-
 .form-defaultinfo,
 .form-label .form-shortname {
   .muted;
@@ -192,10 +162,6 @@ input#id_externalurl {
 .form-label .form-shortname {
   font-size: @fontSizeMini;
   display: block;
-}
-
-.dir-rtl .form-label .form-shortname {
-  text-align: left;
 }
 
 .form-item .form-setting,
@@ -241,24 +207,6 @@ div.backup-section + form,
   padding-left: @horizontalComponentOffset;
 }
 
-.dir-rtl {
-  table#form td.submit,
-  .form-buttons,
-  .path-admin .buttons,
-  #fitem_id_submitbutton,
-  .fp-content-center form + div,
-  div.backup-section + form,
-  #fgroup_id_buttonar {
-    .form-actions;
-    padding-right: 0;
-  }
-  .path-admin .buttons,
-  .form-buttons {
-    // Add back the padding it would usually get from being inside a .form-horizontal.
-    padding-right: @horizontalComponentOffset;
-  }
-}
-
 .form-item .form-setting .form-checkbox.defaultsnext {
   // Need to specify .defaultsnext and the .form-checkbox class
   // is somewhat randomly re-used on various actual checkboxes
@@ -284,81 +232,6 @@ div.backup-section + form,
 .mform legend a:hover {
   color: @textColor;
   text-decoration: none;
-}
-
-.dir-rtl .mform .fitem .felement {
-  margin-right: 30%;
-  margin-left: auto;
-  text-align: right;
-}
-
-// I think this could be avoided (or at least tidied up) ifr
-// we used HTML5 input types like url, phone, email, number etc.
-.dir-rtl .mform .fitem .felement input[name=email],
-.dir-rtl .mform .fitem .felement input[name=email2],
-.dir-rtl .mform .fitem .felement input[name=url],
-.dir-rtl .mform .fitem .felement input[name=idnumber],
-.dir-rtl .mform .fitem .felement input[name=phone1],
-.dir-rtl .mform .fitem .felement input[name=phone2] {
-  text-align: left;
-  direction: ltr;
-}
-
-.dir-rtl #id_s__pathtodu,
-.dir-rtl #id_s__aspellpath,
-.dir-rtl #id_s__pathtodot,
-.dir-rtl #id_s__supportemail,
-.dir-rtl #id_s__supportpage,
-.dir-rtl #id_s__sessioncookie,
-.dir-rtl #id_s__sessioncookiepath,
-.dir-rtl #id_s__sessioncookiedomain,
-.dir-rtl #id_s__proxyhost,
-.dir-rtl #id_s__proxyuser,
-.dir-rtl #id_s__proxypassword,
-.dir-rtl #id_s__proxybypass,
-.dir-rtl #id_s__jabberhost,
-.dir-rtl #id_s__jabberserver,
-.dir-rtl #id_s__jabberusername,
-.dir-rtl #id_s__jabberpassword,
-.dir-rtl #id_s__additionalhtmlhead,
-.dir-rtl #id_s__additionalhtmltopofbody,
-.dir-rtl #id_s__additionalhtmlfooter,
-.dir-rtl #id_s__docroot,
-.dir-rtl #id_s__filter_tex_latexpreamble,
-.dir-rtl #id_s__filter_tex_latexbackground,
-.dir-rtl #id_s__filter_tex_pathlatex,
-.dir-rtl #id_s__filter_tex_pathdvips,
-.dir-rtl #id_s__filter_tex_pathconvert,
-.dir-rtl #id_s__blockedip,
-.dir-rtl #id_s__pathtoclam,
-.dir-rtl #id_s__quarantinedir,
-.dir-rtl #id_s__sitepolicy,
-.dir-rtl #id_s__sitepolicyguest,
-.dir-rtl #id_s__cronremotepassword,
-.dir-rtl #id_s__allowedip,
-.dir-rtl #id_s__blockedip,
-.dir-rtl #id_s_enrol_meta_nosyncroleids,
-.dir-rtl #id_s_enrol_ldap_host_url,
-.dir-rtl #id_s_enrol_ldap_ldapencoding,
-.dir-rtl #id_s_enrol_ldap_bind_dn,
-.dir-rtl #id_s_enrol_ldap_bind_pw,
-.dir-rtl #admin-emoticons .form-text,
-.dir-rtl #admin-role_mapping input[type=text],
-.dir-rtl #id_s_enrol_paypal_paypalbusiness,
-.dir-rtl #id_s_enrol_flatfile_location,
-#page-admin-setting-enrolsettingsflatfile.dir-rtl input[type=text],
-#page-admin-setting-enrolsettingsdatabase.dir-rtl input[type=text],
-#page-admin-auth-db.dir-rtl input[type=text] {
-  direction: ltr;
-}
-
-#page-admin-setting-enrolsettingsflatfile.dir-rtl .informationbox {
-  direction: ltr;
-  text-align: left;
-}
-
-#page-admin-grade-edit-scale-edit.dir-rtl .error input#id_name {
-  margin-right: 170px;
 }
 
 #page-grade-edit-outcome-course .courseoutcomes {
@@ -401,15 +274,8 @@ input[type="checkbox"] + label {
 input[type="radio"],
 input[type="checkbox"] {
   margin-top: -4px; // Dodgy hack, must be better way.
+  margin-left: auto;
   margin-right: 7px;
-}
-
-.dir-rtl {
-  input[type="radio"],
-  input[type="checkbox"] {
-    margin-left: 7px;
-    margin-right: auto;
-  }
 }
 
 .singleselect {
@@ -422,10 +288,6 @@ input[type="checkbox"] {
 
 .form-item .form-label label {
   margin-bottom: 0;
-}
-
-.dir-rtl .form-item .form-label label {
-  text-align: left;
 }
 
 .felement.ffilepicker {
@@ -490,26 +352,6 @@ fieldset.coursesearchbox label {
       .felement {
         padding: 6px;
       }
-    }
-  }
-  &.dir-rtl #region-main .mform:not(.unresponsive) {
-    .femptylabel .fitemtitle {
-      margin-right: 0px;
-      margin-left: 8px;
-    }
-    .fitem {
-      .fitemtitle {
-        text-align: right;
-      }
-      .felement {
-        margin-right: 0;
-        float: right;
-        padding-right: 0;
-        padding-left: 0;
-      }
-    }
-    .fitem_fcheckbox .felement {
-      float: right;
     }
   }
 }
@@ -610,36 +452,6 @@ fieldset.coursesearchbox label {
   }
 }
 
-.dir-rtl #fitem_id_availabilityconditionsjson {
-  .availability-group {
-    margin-right: 0;
-    margin-left: 8px;
-  }
-  .availability-none {
-    margin-right: 20px;
-    margin-left: 0;
-  }
-  .availability-plugincontrols {
-    padding-right: 4px;
-    padding-left: 0px;
-    margin-right: 0;
-    margin-left: 8px;
-  }
-  .availability-eye,
-  .availability-delete {
-    margin-left: 8px;
-    margin-right: 0;
-  }
-  .availability-button {
-    margin-right: 15px;
-    margin-left: 0;
-  }
-  .availability-connector {
-    margin-right: 20px;
-    margin-left: 0;
-  }
-}
-
 /* Default form styling colours all text red. With availability conditions
    this looks excessive as we show 'Invalid' markers in specific places. */
 .mform .error .availability-field {
@@ -680,18 +492,6 @@ fieldset.coursesearchbox label {
     margin-left: 1em;
     margin-right: 1em;
     margin-top: 4px;
-  }
-}
-
-.dir-rtl .availability-dialogue {
-  ul button {
-    float: right;
-    margin-right: 1em;
-    margin-left: 0;
-  }
-  label {
-    margin-right: 170px;
-    margin-left: 1em;
   }
 }
 
