--- a/style/essential-pix.css
+++ b/style/essential-pix.css
@@ -3,6 +3,333 @@
  * @copyright   2014 Gareth J Barnard, David Bezemer
  * @license     http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
+/* core.less */
+.dir-ltr,
+.mdl-left,
+.dir-rtl .mdl-right {
+  text-align: left;
+}
+.dir-rtl,
+.mdl-right,
+.dir-rtl .mdl-left {
+  text-align: right;
+}
+.dir-rtl img.iconhelp,
+.dir-rtl .helplink img {
+  padding-right: 3px;
+  padding-left: 0;
+}
+.dir-rtl .accesshide {
+  top: -30000px;
+  left: auto;
+}
+.dir-rtl .comment-delete {
+  left: 0;
+  right: auto;
+}
+.dir-rtl .moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd .yui3-widget-buttons {
+  left: 0;
+  right: auto;
+}
+/* Question Bank - Question Chooser "Close" button */
+#page-question-edit.dir-rtl a.container-close {
+  right: auto;
+  left: 6px;
+}
+.dir-rtl.jschooser .choosercontainer #chooseform .instruction,
+.dir-rtl.jschooser .choosercontainer #chooseform .typesummary {
+  left: 0;
+  right: 18.5em;
+  border-right: 1px solid grey;
+}
+.dir-rtl ul,
+.dir-rtl ol {
+  margin-left: 0;
+  margin-right: 25px;
+}
+.collapsible-actions .collapseexpand {
+  background: url([[pix:t/collapsed]]) 2px center no-repeat;
+}
+.dir-rtl .collapsible-actions .collapseexpand {
+  background: url([[pix:t/collapsed_rtl]]) right center no-repeat;
+}
+.collapsible-actions .collapse-all,
+.dir-rtl .collapsible-actions .collapse-all {
+  background-image: url([[pix:t/expanded]]);
+}
+.smartselect .smartselect_submenuitem {
+  background-image: url([[pix:moodle|t/collapsed]]);
+}
+/** Fix YUI 2 Treeview for Right to left languages - TODO not sure about this so leaving - GB. **/
+.dir-rtl .ygtvtn,
+.dir-rtl .ygtvtm,
+.dir-rtl .ygtvtmh,
+.dir-rtl .ygtvtmhh,
+.dir-rtl .ygtvtp,
+.dir-rtl .ygtvtph,
+.dir-rtl .ygtvtphh,
+.dir-rtl .ygtvln,
+.dir-rtl .ygtvlm,
+.dir-rtl .ygtvlmh,
+.dir-rtl .ygtvlmhh,
+.dir-rtl .ygtvlp,
+.dir-rtl .ygtvlph,
+.dir-rtl .ygtvlphh,
+.dir-rtl .ygtvdepthcell,
+.dir-rtl .ygtvok,
+.dir-rtl .ygtvok:hover,
+.dir-rtl .ygtvcancel,
+.dir-rtl .ygtvcancel:hover {
+  width: 18px;
+  height: 22px;
+  background-image: url([[pix:theme|yui2-treeview-sprite-rtl]]);
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+.dir-rtl .ygtvtn {
+  background-position: 0 -5600px;
+}
+.dir-rtl .ygtvtm {
+  background-position: 0 -4000px;
+}
+.dir-rtl .ygtvtmh,
+.dir-rtl .ygtvtmhh {
+  background-position: 0 -4800px;
+}
+.dir-rtl .ygtvtp {
+  background-position: 0 -6400px;
+}
+.dir-rtl .ygtvtph,
+.dir-rtl .ygtvtphh {
+  background-position: 0 -7200px;
+}
+.dir-rtl .ygtvln {
+  background-position: 0 -1600px;
+}
+.dir-rtl .ygtvlm {
+  background-position: 0 0;
+}
+.dir-rtl .ygtvlmh,
+.dir-rtl .ygtvlmhh {
+  background-position: 0 -800px;
+}
+.dir-rtl .ygtvlp {
+  background-position: 0 -2400px;
+}
+.dir-rtl .ygtvlph,
+.dir-rtl .ygtvlphh {
+  background-position: 0 -3200px;
+}
+.dir-rtl .ygtvdepthcell {
+  background-position: 0 -8000px;
+}
+.dir-rtl .ygtvok {
+  background-position: 0 -8800px;
+}
+.dir-rtl .ygtvok:hover {
+  background-position: 0 -8844px;
+}
+.dir-rtl .ygtvcancel {
+  background-position: 0 -8822px;
+}
+.dir-rtl .ygtvcancel:hover {
+  background-position: 0 -8866px;
+}
+.dir-rtl.yui-skin-sam .yui-panel .hd {
+  text-align: right;
+}
+.dir-rtl .yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd {
+  text-align: right;
+}
+/** Fix TinyMCE editor right to left **/
+.dir-rtl .clearlooks2.ie9 .mceAlert .mceMiddle span,
+.dir-rtl .clearlooks2 .mceConfirm .mceMiddle span {
+  top: 44px;
+}
+.dir-rtl .o2k7Skin table,
+.dir-rtl .o2k7Skin tbody,
+.dir-rtl .o2k7Skin a,
+.dir-rtl .o2k7Skin img,
+.dir-rtl .o2k7Skin tr,
+.dir-rtl .o2k7Skin div,
+.dir-rtl .o2k7Skin td,
+.dir-rtl .o2k7Skin iframe,
+.dir-rtl .o2k7Skin span,
+.dir-rtl .o2k7Skin *,
+.dir-rtl .o2k7Skin .mceText,
+.dir-rtl .o2k7Skin .mceListBox .mceText {
+  text-align: right;
+}
+.moodle-dialogue-base .closebutton {
+  background-image: url([[pix:theme|sprite]]);
+}
+/* course.less */
+/* COURSE CONTENT */
+.path-course-view li.activity form.togglecompletion .ajaxworking {
+  background: url([[pix:i/ajaxloader]]) no-repeat;
+}
+.coursebox > .info > .coursename a {
+  background-image: url([[pix:moodle|i/course]]);
+}
+.coursebox.remotehost > .info > .categoryname a {
+  background-image: url([[pix:moodle|i/mnethost]]);
+}
+.course_category_tree .category > .info > .categoryname {
+  background-image: url([[pix:moodle|t/collapsed_empty]]);
+}
+.dir-rtl .course_category_tree .category > .info > .categoryname {
+  background-image: url([[pix:moodle|t/collapsed_empty_rtl]]);
+}
+.course_category_tree .category.with_children > .info > .categoryname {
+  background-image: url([[pix:moodle|t/expanded]]);
+}
+.course_category_tree .category.with_children.collapsed > .info > .categoryname {
+  background-image: url([[pix:moodle|t/collapsed]]);
+}
+.dir-rtl .course_category_tree .category.with_children.collapsed > .info > .categoryname {
+  background-image: url([[pix:moodle|t/collapsed_rtl]]);
+}
+.dir-rtl .coursebox > .info > .coursename a {
+  background-position: right;
+}
+.dir-rtl .section .activity {
+  /* The command block for each activity */
+}
+.dir-rtl .section .activity .actions {
+  left: 0;
+  right: auto;
+}
+.dir-rtl .section .activity .contentwithoutlink,
+.dir-rtl .section .activity .activityinstance {
+  padding-left: 4px;
+  padding-right: initial;
+}
+.dir-rtl.editing .section .activity.editor_displayed div.activityinstance {
+  padding-left: initial;
+}
+.dir-rtl.path-course-view .completionprogress {
+  float: none;
+}
+.dir-rtl.path-course-view li.activity form.togglecompletion .ajaxworking {
+  right: -22px;
+}
+.fp-toolbar .fp-tb-search input {
+  background: #ffffff url('[[pix:a/search]]') no-repeat 7px 7px;
+}
+.dir-rtl .filemanager-toolbar .fp-vb-icons a:hover {
+  background: url('[[pix:theme|fp/view_icon_selected]]');
+}
+.dir-rtl .filemanager-toolbar .fp-vb-icons.checked a:hover {
+  background: url('[[pix:theme|fp/view_icon_active]]') no-repeat 0 0;
+}
+.fp-pathbar .fp-path-folder {
+  background: url('[[pix:theme|fp/path_folder]]') no-repeat 0 0;
+}
+.dir-rtl .fp-pathbar .fp-path-folder {
+  background: url('[[pix:theme|fp/path_folder_rtl]]') no-repeat right top;
+}
+.file-picker .ygtvtn,
+.filemanager .ygtvtn {
+  background: url('[[pix:moodle|y/tn]]') 0 0 no-repeat;
+}
+.dir-rtl .filemanager .ygtvtn,
+.dir-rtl .file-picker .ygtvtn {
+  background: url('[[pix:moodle|y/tn_rtl]]') 0 0 no-repeat;
+}
+.file-picker .ygtvtm,
+.filemanager .ygtvtm {
+  background: url('[[pix:moodle|y/tm]]') 0 10px no-repeat;
+}
+.file-picker .ygtvtmh,
+.filemanager .ygtvtmh {
+  background: url('[[pix:moodle|y/tm]]') 0 10px no-repeat;
+}
+.file-picker .ygtvtp,
+.filemanager .ygtvtp {
+  background: url('[[pix:moodle|y/tp]]') 0 10px no-repeat;
+}
+.dir-rtl .file-picker .ygtvtp,
+.dir-rtl .filemanager .ygtvtp {
+  background: url('[[pix:moodle|y/tp_rtl]]') 0 10px no-repeat;
+}
+.file-picker .ygtvtph,
+.filemanager .ygtvtph {
+  background: url('[[pix:moodle|y/tp]]') 0 10px no-repeat;
+}
+.dir-rtl .file-picker .ygtvtph,
+.dir-rtl .filemanager .ygtvtph {
+  background: url('[[pix:moodle|y/tp_rtl]]') 0 10px no-repeat;
+}
+.file-picker .ygtvln,
+.filemanager .ygtvln {
+  background: url('[[pix:moodle|y/ln]]') 0 0 no-repeat;
+}
+.dir-rtl .file-picker .ygtvln,
+.dir-rtl .filemanager .ygtvln {
+  background: url('[[pix:moodle|y/ln_rtl]]') 0 0 no-repeat;
+}
+.file-picker .ygtvlm,
+.filemanager .ygtvlm {
+  background: url('[[pix:moodle|y/lm]]') 0 10px no-repeat;
+}
+.file-picker .ygtvlmh,
+.filemanager .ygtvlmh {
+  background: url('[[pix:moodle|y/lm]]') 0 10px no-repeat;
+}
+.file-picker .ygtvlp,
+.filemanager .ygtvlp {
+  background: url('[[pix:moodle|y/lp]]') 0 10px no-repeat;
+}
+.dir-rtl .file-picker .ygtvlp,
+.dir-rtl .filemanager .ygtvlp {
+  background: url('[[pix:moodle|y/lp_rtl]]') 0 10px no-repeat;
+}
+.file-picker .ygtvlph,
+.filemanager .ygtvlph {
+  background: url('[[pix:moodle|y/lp]]') 0 10px no-repeat;
+}
+.dir-rtl .file-picker .ygtvlph,
+.dir-rtl .filemanager .ygtvlph {
+  background: url('[[pix:moodle|y/lp_rtl]]') 0 10px no-repeat;
+}
+.file-picker .ygtvloading,
+.filemanager .ygtvloading {
+  background: transparent url('[[pix:moodle|y/loading]]') 0 0 no-repeat;
+}
+.file-picker .ygtvdepthcell,
+.filemanager .ygtvdepthcell {
+  background: url('[[pix:moodle|y/vline]]') 0 0 no-repeat;
+}
+.fp-iconview .fp-file.fp-hasreferences .fp-reficons1 {
+  background: url('[[pix:theme|fp/link]]') no-repeat;
+}
+.fp-iconview .fp-file.fp-isreference .fp-reficons2 {
+  background: url('[[pix:theme|fp/alias]]') no-repeat;
+}
+.filemanager .fp-iconview .fp-file.fp-originalmissing .fp-thumbnail {
+  background: url([[pix:s/dead]]) no-repeat;
+}
+.filemanager .fp-filename-icon.fp-hasreferences .fp-reficons1 {
+  background: url('[[pix:theme|fp/link_sm]]') no-repeat 0 0;
+}
+.filemanager .fp-filename-icon.fp-isreference .fp-reficons2 {
+  background: url('[[pix:theme|fp/alias_sm]]') no-repeat 0 0;
+}
+.dndupload-arrow {
+  background: url([[pix:theme|fp/dnd_arrow]]) center no-repeat;
+}
+.mform fieldset.collapsible legend a.fheader {
+  background: url([[pix:t/expanded]]) 2px center no-repeat;
+}
+.mform fieldset.collapsed legend a.fheader {
+  background-image: url([[pix:t/collapsed]]);
+}
+.dir-rtl .mform fieldset.collapsed legend a.fheader {
+  background-image: url([[pix:t/collapsed_rtl]]);
+}
+#rubric-rubric.gradingform_rubric .addcriterion input {
+  background: transparent url([[pix:t/add]]) no-repeat 7px 8px;
+}
 /* @group Editor */
 #tinymce .bor {
   background: url([[pix:theme|bg/dot]]) repeat-x;
