Work in progress.

--- a/less/essential-pix.less
+++ b/less/essential-pix.less
@@ -8,4 +8,4 @@
 @import "moodle/pix/filemanager";
 @import "moodle/pix/forms";
 @import "moodle/pix/grade";
-@import "essential/essential-pix";
+@import "essential/bootstrap-pix";
