--- a/less/essential.less
+++ b/less/essential.less
@@ -21,9 +21,9 @@
 // Override Bootstrap defaults.
 @import "moodle/bootstrapoverride";
 
-// Set image location.
-@iconSpritePath: ~"[[pix:theme|glyphicons-halflings]]";
-@iconWhiteSpritePath: ~"[[pix:theme|glyphicons-halflings-white]]";
+// Set image location.  Now in essential/bootstrap-pix.less included in essential-pix.less.
+@iconSpritePath: ~"";
+@iconWhiteSpritePath: ~"";
 
 // Increase form label width.
 @horizontalComponentOffset: 200px;
