--- a/less/moodle/pix/core.less
+++ b/less/moodle/pix/core.less
@@ -1,62 +1,4 @@
 /* core.less */
-
-// Not sure bit.
-.dir-ltr,
-.mdl-left,
-.dir-rtl .mdl-right {
-  text-align: left;
-}
-
-.dir-rtl,
-.mdl-right,
-.dir-rtl .mdl-left {
-  text-align: right;
-}
-
-.dir-rtl img.iconhelp, .dir-rtl .helplink img {
-  padding-right: 3px;
-  padding-left: 0;
-}
-
-.dir-rtl .accesshide {
-  top: -30000px;
-  left: auto;
-}
-
-.dir-rtl .comment-delete {
-  left: 0;
-  right: auto;
-}
-
-.dir-rtl .moodle-dialogue-base .moodle-dialogue-wrap .moodle-dialogue-hd .yui3-widget-buttons {
-  left: 0;
-  right: auto;
-}
-
-/* Question Bank - Question Chooser "Close" button */
-#page-question-edit.dir-rtl a.container-close {
-  right: auto;
-  left: 6px;
-}
-
-.dir-rtl.jschooser .choosercontainer #chooseform .instruction,
-.dir-rtl.jschooser .choosercontainer #chooseform .typesummary {
-  left: 0;
-  right: 18.5em;
-  border-right: 1px solid grey;
-}
-
-.dir-rtl {
-  // Bootstrap sets right margin to 0. Fail.
-  // They set left margin to 25px so we will copy that.
-  ul, ol {
-    margin-left: 0;
-    margin-right: 25px;
-  }
-}
-
-// End of not sure bit.
-
 .collapsible-actions .collapseexpand {
   background: url(~"[[pix:t/collapsed]]") 2px center no-repeat;
 }
@@ -74,7 +16,7 @@
   background-image: url(~"[[pix:moodle|t/collapsed]]");
 }
 
-/** Fix YUI 2 Treeview for Right to left languages - TODO not sure about this so leaving - GB. **/
+/** Fix YUI 2 Treeview for Right to left languages. **/
 .dir-rtl .ygtvtn,
 .dir-rtl .ygtvtm,
 .dir-rtl .ygtvtmh,
@@ -99,98 +41,6 @@
   background-image: url(~"[[pix:theme|yui2-treeview-sprite-rtl]]");
   background-repeat: no-repeat;
   cursor: pointer;
-}
-
-.dir-rtl .ygtvtn {
-  background-position: 0 -5600px;
-}
-
-.dir-rtl .ygtvtm {
-  background-position: 0 -4000px;
-}
-
-.dir-rtl .ygtvtmh,
-.dir-rtl .ygtvtmhh {
-  background-position: 0 -4800px;
-}
-
-.dir-rtl .ygtvtp {
-  background-position: 0 -6400px;
-}
-
-.dir-rtl .ygtvtph,
-.dir-rtl .ygtvtphh {
-  background-position: 0 -7200px;
-}
-
-.dir-rtl .ygtvln {
-  background-position: 0 -1600px;
-}
-
-.dir-rtl .ygtvlm {
-  background-position: 0 0;
-}
-
-.dir-rtl .ygtvlmh,
-.dir-rtl .ygtvlmhh {
-  background-position: 0 -800px;
-}
-
-.dir-rtl .ygtvlp {
-  background-position: 0 -2400px;
-}
-
-.dir-rtl .ygtvlph,
-.dir-rtl .ygtvlphh {
-  background-position: 0 -3200px
-}
-
-.dir-rtl .ygtvdepthcell {
-  background-position: 0 -8000px;
-}
-
-.dir-rtl .ygtvok {
-  background-position: 0 -8800px;
-}
-
-.dir-rtl .ygtvok:hover {
-  background-position: 0 -8844px;
-}
-
-.dir-rtl .ygtvcancel {
-  background-position: 0 -8822px;
-}
-
-.dir-rtl .ygtvcancel:hover {
-  background-position: 0 -8866px;
-}
-
-.dir-rtl.yui-skin-sam .yui-panel .hd {
-  text-align: right;
-}
-
-.dir-rtl .yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd {
-  text-align: right;
-}
-
-/** Fix TinyMCE editor right to left **/
-.dir-rtl .clearlooks2.ie9 .mceAlert .mceMiddle span, .dir-rtl .clearlooks2 .mceConfirm .mceMiddle span {
-  top: 44px;
-}
-
-.dir-rtl .o2k7Skin table,
-.dir-rtl .o2k7Skin tbody,
-.dir-rtl .o2k7Skin a,
-.dir-rtl .o2k7Skin img,
-.dir-rtl .o2k7Skin tr,
-.dir-rtl .o2k7Skin div,
-.dir-rtl .o2k7Skin td,
-.dir-rtl .o2k7Skin iframe,
-.dir-rtl .o2k7Skin span,
-.dir-rtl .o2k7Skin *,
-.dir-rtl .o2k7Skin .mceText,
-.dir-rtl .o2k7Skin .mceListBox .mceText {
-  text-align: right;
 }
 
 .moodle-dialogue-base .closebutton {
