--- a/less/moodle/rtl/forms.less
+++ b/less/moodle/rtl/forms.less
@@ -3,6 +3,18 @@
   text-align: left;
 }
 
+// Boostrap code needed for just below.  Pulling in bootstrap/forms.less is not an option.
+// FORM ACTIONS
+// ------------
+.form-actions {
+  padding: (@baseLineHeight - 1) 20px @baseLineHeight;
+  margin-top: @baseLineHeight;
+  margin-bottom: @baseLineHeight;
+  background-color: @formActionsBackground;
+  border-top: 1px solid #e5e5e5;
+  .clearfix(); // Adding clearfix to allow for .pull-right button containers
+}
+
 .dir-rtl {
   table#form td.submit,
   .form-buttons,
